--- a/examples/tf23-image/Dockerfile
+++ b/examples/tf23-image/Dockerfile
@@ -1,6 +1,7 @@
-FROM tensorflow/tensorflow:2.3.0
-
+FROM continuumio/anaconda3
 RUN pip install ipykernel && \
         python -m ipykernel install --sys-prefix
+        
+RUN pip install -r requirements.txt
 
 COPY my-file.txt /root/my-file.txt
