--- a/examples/tf23-image/requirements.txt
+++ b/examples/tf23-image/requirements.txt
@@ -4,7 +4,7 @@ nbconvert==5.4.0
 numpy==1.15.4
 openpyxl==2.5.7
 pandas==0.23.4
-pylospacing==0.1
+pycospacing==0.1
 scikit-learn==0.22
 scipy==1.1.0
 python-dateutil==2.7.5
