--- a/examples/tf23-image/requirements.txt
+++ b/examples/tf23-image/requirements.txt
@@ -1,15 +1,13 @@
 konlpy==0.5.1
 matplotlib==3.0.2
 nbconvert==5.4.0
-numpy==1.15.4
+numpy
 openpyxl==2.5.7
-pandas==0.23.4
-pycospacing==0.1
+pandas
 scikit-learn==0.22
 scipy==1.1.0
 python-dateutil==2.7.5
 termcolor==1.1.0
 tqdm==4.26.0
 xgboost==0.82
-pyspark==2.4.0
-PyHive==0.6.1
+boto3
