--- a/examples/tf23-image/Dockerfile
+++ b/examples/tf23-image/Dockerfile
@@ -1,7 +1,8 @@
-FROM continuumio/anaconda3
+FROM tensorflow/tensorflow:2.3.0
+
 RUN pip install ipykernel && \
         python -m ipykernel install --sys-prefix
-        
-RUN pip install -r requirements.txt
+
+RUN pip install soynlp
 
 COPY my-file.txt /root/my-file.txt
